--- a/4월 2주차/4월 17일.MD
+++ b/4월 2주차/4월 17일.MD
@@ -11,8 +11,7 @@ DOM 객체선택
 스타일 설정
 - obj.style.backgroundColor = 'green';
 - document.body.style.backgroundColor = '#0000ff | rgb(0,100,150))';
-- obj.style.cssText = "background-color:green"; // css 동일
-- obj.style.cssText = "background-color:green"; // css 동일
+- obj.style.cssText = "background-color:green"; // css 동
 
 스타일 읽어오기
 - 1) HTML에 설저된 값 읽기 : style = obj.style.color :
@@ -21,13 +20,45 @@ DOM 객체선택
 style =window.getComputedStyle(셀렉터); //  css스타일 객체 가져온다.
 value = style.getPropertyValue('color'); // 그 속에서 color값 읽어온다.
 ~~~
+
+DOM 객체 ***생성 및 꾸미기***
+- let newTag = document.createElement('p');
+- newTag.setAttribute('id', 'myDiv')  //  속성, 속성값 추가
+
+DOM개체 붙이기
+- 부모.appendChild(newTag) - 마지막자식으로 붙이기, 부모.insertBeofre(기준자식) - 기준자식 앞 붙이기
+
+DOM객체 제거하기
+- 부모.removeChild(떼내고자하는 자식), 부모.replaceChild(교체하고자하는 자식)
+
 -----------------------------------------------------------------------------------------------
 
-# JS 시작
+## 이론들
+```
 
-## 오늘의 학습목표
-- HTML DOM객체를 이해하고 변경할 수 있다.
-- Event를 이해하고 적용할 수 있다.
+```
 
-## 포트폴리오 페이지 작성 매일하기
-- 6~7교시 : 학습내용 실습 + 포트폴리오 작업
+
+### event 간단하게
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>HTML태그에 리스너 작성</h3>
+	<hr>
+	<p onmousemove="this.style.backgroundColor='orange'"
+		onmouseout="this.style.backgroundColor='white';
+					this.style.fontSize='15px'"
+		onmousewheel="body.style.backgroundColor='yellow'"
+		ondblclick="this.style.fontSize='30px'"
+	>
+		마우스를 올리면 오렌지 배경색으로 변하고, 벗어나면 흰색으로 변하게 됩니다.
+	</p>
+</body>
+</html>
+```
+
