--- a/4월 2주차/4월 17일.MD
+++ b/4월 2주차/4월 17일.MD
@@ -34,8 +34,35 @@ DOM객체 제거하기
 -----------------------------------------------------------------------------------------------
 
 ## 이론들
-```
+```html
+<!-- 
+	Event객체
+		. 이벤트객체 : 이벤트에 대한 정보를 담는 객체이다.
+		. 이벤트가 발생하면 브라우저는 이벤트 객체를 생성해서 그 속에 이벤트에 대한 정보를 담는 객체
+		. 이벤트가 발생한 target을 찾아서 그 속에 구현해 놓은 리스너에게 전달한다.
+		
+	이벤트 객체를 전달받는 3가지 방법
+		. 매게변수를 통해 객체를 전달받는 방법
+			- 리스너함수 : function(e){
+						// 만약 함수 안에서 이벤트 객체의 정보를 활용하려 한다면
+							매개변수로 e를 선언해준다.
+							e.type();
+						}
+			- 호출	: obj.onclick = f;
+		
+		. HTML 태그안에 리스너인 경우
+				- event라는 이름으로 전달한다 (매개변수에 event적시)
+				<button onclick='f(event)'>
 
+	event객체의 속성
+		. type	:	이벤트가 발생한 종류를 나타내는 문자열 반환
+		. target:	이벤트를 발생시킨 객체
+		. currentTarget : 혀재 이벤트 리스너를 실행하고 있는 DOM객체
+		. defaultPrevented : 디폴트 행동이 취소되었는지를 true/false로 반환
+		. preventDefault() : 이벤트의 디폴트 행동을 취소시키는 메서드
+				- a, submit, reset, check
+
+-->
 ```
 
 
@@ -62,3 +89,68 @@ DOM객체 제거하기
 </html>
 ```
 
+### function 이용
+```html
+<!DOCTYPE html>
+<!-- 
+	Event객체
+		. 이벤트객체 : 이벤트에 대한 정보를 담는 객체이다.
+		. 이벤트가 발생하면 브라우저는 이벤트 객체를 생성해서 그 속에 이벤트에 대한 정보를 담는 객체
+		. 이벤트가 발생한 target을 찾아서 그 속에 구현해 놓은 리스너에게 전달한다.
+		
+	이벤트 객체를 전달받는 3가지 방법
+		. 매게변수를 통해 객체를 전달받는 방법
+			- 리스너함수 : function(e){
+						// 만약 함수 안에서 이벤트 객체의 정보를 활용하려 한다면
+							매개변수로 e를 선언해준다.
+							e.type();
+						}
+			- 호출	: obj.onclick = f;
+		
+		. HTML 태그안에 리스너인 경우
+				- event라는 이름으로 전달한다 (매개변수에 event적시)
+				<button onclick='f(event)'>
+
+	event객체의 속성
+		. type	:	이벤트가 발생한 종류를 나타내는 문자열 반환
+		. target:	이벤트를 발생시킨 객체
+		. currentTarget : 혀재 이벤트 리스너를 실행하고 있는 DOM객체
+		. defaultPrevented : 디폴트 행동이 취소되었는지를 true/false로 반환
+		. preventDefault() : 이벤트의 디폴트 행동을 취소시키는 메서드
+				- a, submit, reset, check
+
+-->
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body onload="f2()">
+	<h3>이벤트객체에 대한 학습입니다.</h3>
+	<hr>
+	<img id="img" src="./image/cat2.jpg" width="100px" height="100px"><br>
+	<button onclick="f(event)">버튼을 클릭해 보세요.</button>
+	<p id="p">마우스를 올려보세요.</p>
+
+	<script>
+		function f(e){
+			alert(e.type);
+		}
+
+		function f2(){
+			let p = document.getElementById('p');
+			p.onmouseover = f;
+
+			let img = document.getElementById('img');
+			img.onmouseout = function(e){
+				alert(e.type);
+			}
+		}
+	</script>
+
+</body>
+</html>
+
+
+
+```
