--- a/4월 2주차/4월 17일.MD
+++ b/4월 2주차/4월 17일.MD
@@ -63,6 +63,26 @@ DOM객체 제거하기
 				- a, submit, reset, check
 
 -->
+
+<!-- 
+	마우스 핸들링
+		. 웹 페이지에서 가장 많이 사용되는 이벤트이다.
+		. 마우스 이벤트객체에는 포인트위치, 클릭버튼 정보 등이 담긴다.
+
+		x, y	:	타깃객체의 부모객체 안에서의 마우스 좌표
+		clientX,clientY : 브라우저 윈도우의 문서출력영역(body)에서의 기준으로 마우스 좌표
+		screenX, screenY : 스크린을 기준으로 한 마우스 좌표
+		offsetX, offsetY : 타깃 객체 안에서의 좌표
+
+		button	:	0 - 아무버튼도 안눌러진 상태
+					1 - 왼쪽버튼이 눌러진 상태
+					2 - 오른쪽
+					3 - 왼쪽+오른쪽
+					4 - 중간버튼
+
+		wheelDelta	양수, 음수
+ -->
+	
 ```
 
 
@@ -153,4 +173,41 @@ DOM객체 제거하기
 
 
 
+```
+
+### screenXY, clientXY, offsetXY
+```html
+<!DOCTYPE html>
+
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<p>이미지 위에서 마우스를 움직일때 onmousemove리스너가 실행되고,<br>
+	마우스의 좌표값을 보여줍니다.</p>
+	<br>
+	<img src="./image/cat2.jpg" width="500" height="300"
+		onmousemove = "where(event)">
+	<div id="div"></div>
+
+	<script>
+		let div = document.getElementById('div');
+		function where(e) {
+			let text = `버튼  = ${e.button}<br>`
+			text += `스크린을 기준으로 좌표(screenX, screenY)= 
+						${e.screenX},${e.screenY}<br>`;
+			text += `브라우저 윈도우내의 문서출력영역내에서의 좌표
+					(clientX,clientY)= ${e.clientX},${e.clientY}<br>`;
+
+			text += `타깃객체 안에서 좌표(offsetX,offsetY)= ${e.offsetX},${e.offsetY}<br>`;
+
+			text += `부모객체기준의 좌표(x,y) = ${e.x},${e.y}`
+
+			div.innerHTML = text;
+		}
+	</script>
+</body>
+</html>
 ```
