--- a/4월 2주차/4월 17일.MD
+++ b/4월 2주차/4월 17일.MD
@@ -82,6 +82,30 @@ DOM객체 제거하기
 
 		wheelDelta	양수, 음수
  -->
+
+<!-- 
+	select
+		. 콤보박스를 나타낸다.
+		. 선택된 option은 selectedIndex로 알아낸다.
+		. onchange리스너와 연결하여 사용한다.
+		. length : 옵션개수
+		. selectedIndex : 선택된 option의 인덱스
+		. size
+
+	option
+		. selected : checked와 동일한 역할
+		. text : 옵션 문자열,
+		. value : value속성 문자열
+
+	Image
+		. 이미지출력 :	1) 자바스크립트에서 new Image()객체를 생성해서 할 수 있다.
+						img.src=""
+
+						. let image = new Image()는 이미지를 미리 로딩시켜놓는 역할을 한다.
+						. img.src = image;
+
+					2) <img src=''> 
+ -->
 	
 ```
 
@@ -208,6 +232,44 @@ DOM객체 제거하기
 			div.innerHTML = text;
 		}
 	</script>
+</body>
+</html>
+```
+
+### 포커스 onfocus onblur
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	function checkFilled(obj){
+		if(obj.value ==""){
+
+			let w = window.open('','mywin','width=500px,height=150px,'+
+											'left=500px,top=300px,backgroundColor=pink');
+			w.document.open();
+			w.document.write(`<html><head></head>
+			<body style='text-align : center; width:300px; height:150px
+						margin:0 auto; background-color:pink'>
+						<h2>이름을 적어주세요</h2>
+						</body></html>`);
+			w.document.close();
+
+			obj.focus();
+		}
+	}
+
+</script>
+</head>
+<body onload="document.getElementById('name').focus()">
+	<p>이름을 입력하지 않고 다른 창으로 이동할 수 없습니다.</p>
+	<form>
+		이름 <input type="text" id="name" onblur="checkFilled(this)"><br>
+		학번 <input type="text">
+	</form>
 </body>
 </html>
 ```
