--- a/4월 2주차/4월 17일.MD
+++ b/4월 2주차/4월 17일.MD
@@ -313,3 +313,90 @@ DOM객체 제거하기
 </body>
 </html>
 ```
+
+
+------------------------------------------------------
+
+# 과제1
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>실습</title>
+<script>
+// img 클릭시 이미지 바뀌게 하는거 만들기(사진 찍어둠 0417)
+
+	let files = [, , , ,];
+	let imgs = new Array();
+	for(i=0;i<files.length;i++){
+		imgs[i]=new Image();
+		imgs[i]=files[i];
+	}
+
+	let next = 1;
+
+	function change(img){
+
+	}
+
+
+</script>
+</head>
+<body>
+	<img style="border: 20px ridge wheat;"
+		src="" alt=""
+		width="200px" height="200px"
+		onclick="change(this)">
+</body>
+</html>
+```
+
+### 과제2 숫자패드에 따라 백그라운드 채워짐
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	td{width: 50px; height: 50px; border: 1px solid orchid;}
+</style>
+<script>
+
+	let tds;
+	let prevIndex = 0; index = 0;
+	window.onload = function(){
+		tds = document.getElementsByName('td');
+		tds[index].style.backgroundColor = 'orchid';
+	}
+
+	window.onkeydown = function(e){
+		// 방향키에 따른 인덱스를 활용해서 처리한다.
+	}
+
+</script>
+</head>
+<body>
+	<table>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+	</table>
+</body>
+</html>
+```
