--- a/4월 2주차/4월 18일.MD
+++ b/4월 2주차/4월 18일.MD
@@ -38,6 +38,27 @@ event 흐름
 1) let img = new = image();
 2) img.src = img
 
+라디오 버튼
+- getEmenetsByName('name')으로 가져온 다음에
+- 반복문속에서 객체.checked==true?  확인하여 선택버튼을 알아낸다
+
+체크박스
+- name속성이 모두 다르다.
+- input type="checkbox" name = '', onclick = "리스너함수(this)" + if문과 name
+
+Select
+- 선택된 옵션은 selectedindex로 알아낸다 - let index = 객체.selectedIndex;
+```
+* select와 onchange() 리스너
+* select프로퍼티와 컬렉션
+  - lenghth : 옵션개수
+  - selecttedIndex : 선택된 옵션의 인덱스 번호
+  - size : 보여지는 개수
+  
+* option 객체의 프로퍼티
+  - selected : 옵션이 선택상태이면 true
+  - text : 옵션 문자열, value : value 속성 문자열
+```
 
 -----------------------------------------------------------------------------------------------
 
