--- a/4월 2주차/4월 18일.MD
+++ b/4월 2주차/4월 18일.MD
@@ -62,4 +62,8 @@ Select
 
 -----------------------------------------------------------------------------------------------
 
+# 오늘의 학습목표
+- Event 실습 및 Window를 이해하고 적용할 수 있다.
+- * 포트폴리오 페이지 작성 : 6~7교시 - 학습내용 실습 + 포트폴리오 작
+
 ## 이론들
