--- a/4월 2주차/4월 18일.MD
+++ b/4월 2주차/4월 18일.MD
@@ -67,3 +67,74 @@ Select
 - * 포트폴리오 페이지 작성 : 6~7교시 - 학습내용 실습 + 포트폴리오 작
 
 ## 이론들
+```html
+<!-- 
+	BOM
+		- 브라우저가 실행되 있는 환경에 자바스크립트 코드로 접근하고 제어할 수
+			있도록 설계된 객체들의 그룹이다.
+		- 표준이 없다.
+		- 종류
+			. window
+				. navigator
+				. history
+				. location
+				. screen
+				. document = html (DOM객체)
+
+		- window
+			1) 속성
+				. window	:	현재 윈도우 객체에 대한 레퍼런스
+				. document	:	윈도우에 담긴 document객체에 대한 레퍼런스
+				. location
+				. navigator
+				. history
+				. name		:	윈도우 이름
+				. menubar
+				. scrollbars
+				. toolbar
+				
+				. frames	:	윈도우에 존재하는 frames 컬렉션
+				. length	:	윈도우에 존재하는 frames의 개수
+
+				. close		:	윈도우가 닫혀있으면 true 갖는다.
+
+				. top		:	최상위 윈도우 객체의 레퍼런스
+				. parent	:	부모 윈도우 객체의 레퍼런스
+
+				. innerWidth : 	수직스크롤바를 포함하여 브라우저 안에 HTML문서가 출력되는 영역
+				. innerHeight : 수평스크롤바를 포함하여 (	상  동	)
+				. outerWidth :
+				. outerHeight :
+
+				. screenX/Y	:	스크린상의 윈도우 X좌표, Y좌표
+				. scrollX/Y	:	현재 문서의 스크롤 X값, Y값
+
+			2) 메서드
+				. open()	:	 새 윈도우 열기
+				. close()	:	윈도우 닫기
+				. focus()
+				. blur()	:	포커스 해제
+				. getSelection() : 윈도우 안에 선택된 텍스트를 문자열로 반환해준다.
+
+				. alert(), confirm(), prompt()
+				. print(): 현재 페이지를 출력하기
+
+				. setInterval() : 반복호출 타이머를 가동시킨다.
+				. clearInterval() : 가동중인 타이머 중단
+
+				. setTimeout() : 1회 호출
+				. clearTimeout() : setTimeout 중단
+
+	. 윈도우 창 열기
+			. let 변수 = window.open ("출력할 웹페이지", "창의 이름", "윈도우의 모양크기 속성");
+				- 창의 이름 : 내가 짓는 이름, 생략도 가능
+						_blank, _parent, _self, _top
+
+				- 속성
+					. width, height, left(스크린상의 x값), top, 
+					. resizable(yes|no), scrollbar(수펴수직 스크롤러 출력지정 -yes|no)
+					. location, status, toolbar
+ -->
+
+
+```
