--- a/4월 2주차/4월 18일.MD
+++ b/4월 2주차/4월 18일.MD
@@ -144,3 +144,74 @@ Select
  -->
 
 ```
+
+### setInterval
+```html
+<!DOCTYPE html>
+<!-- 
+	웹페이지 스크롤
+		: window객체를 활용하면 웹 페이지를 상하좌우로 스크롤 할 수 있다.
+		- scrollBy(x,y) , scrollTo(x,y)
+ -->
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+	function startScroll(interval){
+		setInterval('autoScroll()',interval)
+	}
+
+	function autoScroll(){
+		window.scrollBy(0,10);
+	}
+
+</script>
+</head>
+<body onload="startScroll(1000)" style="background: yellow;">
+	<h3>자동 스크롤 페이지</h3>
+	<hr>
+	<h3>꿈길(이동순)</h3>
+	꿈길에발자취가 있다면남의 집 창밖<br>
+	그 돌계단 길이 이미 오래전에<br>
+	모래가 되고 말았을 거에요<br>
+	하지만<br>
+	그 꿈길에서 자취가 없다 하니<br>
+	나는 그것이 정말 서러워요<br>
+	이 밤도<br>
+	나는 님의 집 창밖<br>
+	그 돌계단 위에 홀로 서서<br>
+	혹시라도 님의 목소리가 들려올까<br>
+	고개 숙이고 엿들어요
+</body>
+</html>
+```
+
+### window.location select option
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+	function load(){
+		let select = document.getElementById('site');
+		window.location=select[select.selectedIndex].value;
+	}
+</script>
+</head>
+<body>
+	<h3>웹 사이트 접속(페이지이동)</h3>
+	<hr>
+	<select id="site">
+		<option value="http://www.naver.com">네이버</option>
+		<option value="http://www.google.com">구글</option>
+		<option value="win6.html">내페이지</option>
+	</select>
+	<p></p>
+	<button onclick="load()">사이트접속</button>
+
+</body>
+</html>
+```
