--- a/4월 3주차/4월 17일.MD
+++ b/4월 3주차/4월 17일.MD
@@ -1,1 +1,402 @@
+# Review
+DOM 객체선택
+- obj = document.getElementByid('id);
+- obj = document.getElementsByTagName('tag');
+- obj = document.getElementsByClassName('class');
+- obj = document.getElementByName('name);
 
+#### document.querySelectorAll('ul>li:last')  // css 선택자를 사용할 수 있다. 모두 가져와짐(컬렉션타입 반환)
+#### document.querySelector('ul>li:last');  // 해당하는 첫번째만 가져와짐
+
+스타일 설정
+- obj.style.backgroundColor = 'green';
+- document.body.style.backgroundColor = '#0000ff | rgb(0,100,150))';
+- obj.style.cssText = "background-color:green"; // css 동
+
+스타일 읽어오기
+- 1) HTML에 설저된 값 읽기 : style = obj.style.color :
+- 2) 셀렉터로 설정된 스타일 값 읽기 : 
+~~~
+style =window.getComputedStyle(셀렉터); //  css스타일 객체 가져온다.
+value = style.getPropertyValue('color'); // 그 속에서 color값 읽어온다.
+~~~
+
+DOM 객체 ***생성 및 꾸미기***
+- let newTag = document.createElement('p');
+- newTag.setAttribute('id', 'myDiv')  //  속성, 속성값 추가
+
+DOM개체 붙이기
+- 부모.appendChild(newTag) - 마지막자식으로 붙이기, 부모.insertBeofre(기준자식) - 기준자식 앞 붙이기
+
+DOM객체 제거하기
+- 부모.removeChild(떼내고자하는 자식), 부모.replaceChild(교체하고자하는 자식)
+
+-----------------------------------------------------------------------------------------------
+
+## 이론들
+```html
+<!-- 
+	Event객체
+		. 이벤트객체 : 이벤트에 대한 정보를 담는 객체이다.
+		. 이벤트가 발생하면 브라우저는 이벤트 객체를 생성해서 그 속에 이벤트에 대한 정보를 담는 객체
+		. 이벤트가 발생한 target을 찾아서 그 속에 구현해 놓은 리스너에게 전달한다.
+		
+	이벤트 객체를 전달받는 3가지 방법
+		. 매게변수를 통해 객체를 전달받는 방법
+			- 리스너함수 : function(e){
+						// 만약 함수 안에서 이벤트 객체의 정보를 활용하려 한다면
+							매개변수로 e를 선언해준다.
+							e.type();
+						}
+			- 호출	: obj.onclick = f;
+		
+		. HTML 태그안에 리스너인 경우
+				- event라는 이름으로 전달한다 (매개변수에 event적시)
+				<button onclick='f(event)'>
+
+	event객체의 속성
+		. type	:	이벤트가 발생한 종류를 나타내는 문자열 반환
+		. target:	이벤트를 발생시킨 객체
+		. currentTarget : 혀재 이벤트 리스너를 실행하고 있는 DOM객체
+		. defaultPrevented : 디폴트 행동이 취소되었는지를 true/false로 반환
+		. preventDefault() : 이벤트의 디폴트 행동을 취소시키는 메서드
+				- a, submit, reset, check
+
+-->
+
+<!-- 
+	마우스 핸들링
+		. 웹 페이지에서 가장 많이 사용되는 이벤트이다.
+		. 마우스 이벤트객체에는 포인트위치, 클릭버튼 정보 등이 담긴다.
+
+		x, y	:	타깃객체의 부모객체 안에서의 마우스 좌표
+		clientX,clientY : 브라우저 윈도우의 문서출력영역(body)에서의 기준으로 마우스 좌표
+		screenX, screenY : 스크린을 기준으로 한 마우스 좌표
+		offsetX, offsetY : 타깃 객체 안에서의 좌표
+
+		button	:	0 - 아무버튼도 안눌러진 상태
+					1 - 왼쪽버튼이 눌러진 상태
+					2 - 오른쪽
+					3 - 왼쪽+오른쪽
+					4 - 중간버튼
+
+		wheelDelta	양수, 음수
+ -->
+
+<!-- 
+	select
+		. 콤보박스를 나타낸다.
+		. 선택된 option은 selectedIndex로 알아낸다.
+		. onchange리스너와 연결하여 사용한다.
+		. length : 옵션개수
+		. selectedIndex : 선택된 option의 인덱스
+		. size
+
+	option
+		. selected : checked와 동일한 역할
+		. text : 옵션 문자열,
+		. value : value속성 문자열
+
+	Image
+		. 이미지출력 :	1) 자바스크립트에서 new Image()객체를 생성해서 할 수 있다.
+						img.src=""
+
+						. let image = new Image()는 이미지를 미리 로딩시켜놓는 역할을 한다.
+						. img.src = image;
+
+					2) <img src=''> 
+ -->
+	
+```
+
+
+### event 간단하게
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>HTML태그에 리스너 작성</h3>
+	<hr>
+	<p onmousemove="this.style.backgroundColor='orange'"
+		onmouseout="this.style.backgroundColor='white';
+					this.style.fontSize='15px'"
+		onmousewheel="body.style.backgroundColor='yellow'"
+		ondblclick="this.style.fontSize='30px'"
+	>
+		마우스를 올리면 오렌지 배경색으로 변하고, 벗어나면 흰색으로 변하게 됩니다.
+	</p>
+</body>
+</html>
+```
+
+### function 이용
+```html
+<!DOCTYPE html>
+<!-- 
+	Event객체
+		. 이벤트객체 : 이벤트에 대한 정보를 담는 객체이다.
+		. 이벤트가 발생하면 브라우저는 이벤트 객체를 생성해서 그 속에 이벤트에 대한 정보를 담는 객체
+		. 이벤트가 발생한 target을 찾아서 그 속에 구현해 놓은 리스너에게 전달한다.
+		
+	이벤트 객체를 전달받는 3가지 방법
+		. 매게변수를 통해 객체를 전달받는 방법
+			- 리스너함수 : function(e){
+						// 만약 함수 안에서 이벤트 객체의 정보를 활용하려 한다면
+							매개변수로 e를 선언해준다.
+							e.type();
+						}
+			- 호출	: obj.onclick = f;
+		
+		. HTML 태그안에 리스너인 경우
+				- event라는 이름으로 전달한다 (매개변수에 event적시)
+				<button onclick='f(event)'>
+
+	event객체의 속성
+		. type	:	이벤트가 발생한 종류를 나타내는 문자열 반환
+		. target:	이벤트를 발생시킨 객체
+		. currentTarget : 혀재 이벤트 리스너를 실행하고 있는 DOM객체
+		. defaultPrevented : 디폴트 행동이 취소되었는지를 true/false로 반환
+		. preventDefault() : 이벤트의 디폴트 행동을 취소시키는 메서드
+				- a, submit, reset, check
+
+-->
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body onload="f2()">
+	<h3>이벤트객체에 대한 학습입니다.</h3>
+	<hr>
+	<img id="img" src="./image/cat2.jpg" width="100px" height="100px"><br>
+	<button onclick="f(event)">버튼을 클릭해 보세요.</button>
+	<p id="p">마우스를 올려보세요.</p>
+
+	<script>
+		function f(e){
+			alert(e.type);
+		}
+
+		function f2(){
+			let p = document.getElementById('p');
+			p.onmouseover = f;
+
+			let img = document.getElementById('img');
+			img.onmouseout = function(e){
+				alert(e.type);
+			}
+		}
+	</script>
+
+</body>
+</html>
+
+
+
+```
+
+### screenXY, clientXY, offsetXY
+```html
+<!DOCTYPE html>
+
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<p>이미지 위에서 마우스를 움직일때 onmousemove리스너가 실행되고,<br>
+	마우스의 좌표값을 보여줍니다.</p>
+	<br>
+	<img src="./image/cat2.jpg" width="500" height="300"
+		onmousemove = "where(event)">
+	<div id="div"></div>
+
+	<script>
+		let div = document.getElementById('div');
+		function where(e) {
+			let text = `버튼  = ${e.button}<br>`
+			text += `스크린을 기준으로 좌표(screenX, screenY)= 
+						${e.screenX},${e.screenY}<br>`;
+			text += `브라우저 윈도우내의 문서출력영역내에서의 좌표
+					(clientX,clientY)= ${e.clientX},${e.clientY}<br>`;
+
+			text += `타깃객체 안에서 좌표(offsetX,offsetY)= ${e.offsetX},${e.offsetY}<br>`;
+
+			text += `부모객체기준의 좌표(x,y) = ${e.x},${e.y}`
+
+			div.innerHTML = text;
+		}
+	</script>
+</body>
+</html>
+```
+
+### 포커스 onfocus onblur
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	function checkFilled(obj){
+		if(obj.value ==""){
+
+			let w = window.open('','mywin','width=500px,height=150px,'+
+											'left=500px,top=300px,backgroundColor=pink');
+			w.document.open();
+			w.document.write(`<html><head></head>
+			<body style='text-align : center; width:300px; height:150px
+						margin:0 auto; background-color:pink'>
+						<h2>이름을 적어주세요</h2>
+						</body></html>`);
+			w.document.close();
+
+			obj.focus();
+		}
+	}
+
+</script>
+</head>
+<body onload="document.getElementById('name').focus()">
+	<p>이름을 입력하지 않고 다른 창으로 이동할 수 없습니다.</p>
+	<form>
+		이름 <input type="text" id="name" onblur="checkFilled(this)"><br>
+		학번 <input type="text">
+	</form>
+</body>
+</html>
+```
+
+### checked
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+	function findChecked(){
+		let found = null;
+		let city = document.getElementsByName('city');
+
+		for(i=0;i<city.length;i++){
+			if(city[i].checked == true) {
+				found = city[i];
+			} 
+		}
+
+		if(found != null){
+			alert(found.value+"가 선택되었습니다.")
+		} else{
+			alert('선택한 것이 없습니다.')
+		}
+
+	}
+
+
+</script>
+</head>
+<body>
+	<form>
+		<input type="radio" name="city" value="seoul">서울
+		<input type="radio" name="city" value="busan">부산
+		<input type="radio" name="city" value="chuncheon">춘천
+		<input type="button" value="find" onclick="findChecked()">
+	</form>
+</body>
+</html>
+```
+
+
+------------------------------------------------------
+
+# 과제1
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>실습</title>
+<script>
+// img 클릭시 이미지 바뀌게 하는거 만들기(사진 찍어둠 0417)
+
+	let files = [, , , ,];
+	let imgs = new Array();
+	for(i=0;i<files.length;i++){
+		imgs[i]=new Image();
+		imgs[i]=files[i];
+	}
+
+	let next = 1;
+
+	function change(img){
+
+	}
+
+
+</script>
+</head>
+<body>
+	<img style="border: 20px ridge wheat;"
+		src="" alt=""
+		width="200px" height="200px"
+		onclick="change(this)">
+</body>
+</html>
+```
+
+### 과제2 숫자패드에 따라 백그라운드 채워짐
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	td{width: 50px; height: 50px; border: 1px solid orchid;}
+</style>
+<script>
+
+	let tds;
+	let prevIndex = 0; index = 0;
+	window.onload = function(){
+		tds = document.getElementsByName('td');
+		tds[index].style.backgroundColor = 'orchid';
+	}
+
+	window.onkeydown = function(e){
+		// 방향키에 따른 인덱스를 활용해서 처리한다.
+	}
+
+</script>
+</head>
+<body>
+	<table>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+	</table>
+</body>
+</html>
+```
