--- a/4월 3주차/4월 18일.MD
+++ b/4월 3주차/4월 18일.MD
@@ -1,1 +1,262 @@
+# Review
+사진 찍은것들
 
+HTML Event 작성 방법
+- HTML태그 안에서 작성
+- HTML DOM객체가 가지고 있는 이벤트 리스너 프로퍼티에 작성
+- DOM객체의 addEventListener('이벤트',리스너함수명,true|false) 활용 작성
+
+event 객체
+- 일반 함수형 리스너함수 - 첫번째 매개변수를 통해 전달받는다.(생략가능)
+- 익명함수              - 첫번째 매개변수를 통해 전달받는다.(생략가능)
+- HTML태그 안에 리스너 함수 - 이벤트 객체느 event 이름으로 전달 받는다
+- event객체 프로퍼티(속성)
+```
+- Type : 이벤트가 발생한 이벤트의 종류를 나타내는 문자열(click,load등)
+- target : 이벤트를 발생시킨 객체(DOM 또는 HTML태그)
+- currentTarget:현재 이벤트 리스너를 실행하고 있는 DOM객체
+- preventDefault(): 이벤트 디폴트 행동을 취소시키는 메서드
+```
+
+event 흐름
+- 캡쳐단계, 버블단계
+
+마우스 핸들링
+- x,y : (x,y)는 타깃 객체의 부모 객체내에서의 마우스 좌표
+- client X,Y
+- screenX,Y
+- offsetX,Y
+- wheelDelta : 마우스 휠이 구르는 방향(위-양수, 아래-음수)
+
+이미지 로딩과 출력
+- img태그를 사용하지 않고 자바스크립트 코드로 image객체를 생성하여 로딩 할 수 있다.
+- let image = new Image()에 의해 생성된 image객체는
+- 이미지를 로딩하여 저장해 두는 목적으로만 사용된다.
+- image객체에 로딩된 이미지는 반드시 img태그를 통해서만 화면에 출력된다.
+- 웹 페이지의 출력속도를 높이기 위해... 미리 이미지를 newimage()로 객체를 만들어 로딩해놓고 활용하는 것이 좋다.
+
+1) let img = new = image();
+2) img.src = img
+
+라디오 버튼
+- getEmenetsByName('name')으로 가져온 다음에
+- 반복문속에서 객체.checked==true?  확인하여 선택버튼을 알아낸다
+
+체크박스
+- name속성이 모두 다르다.
+- input type="checkbox" name = '', onclick = "리스너함수(this)" + if문과 name
+
+Select
+- 선택된 옵션은 selectedindex로 알아낸다 - let index = 객체.selectedIndex;
+```
+* select와 onchange() 리스너
+* select프로퍼티와 컬렉션
+  - lenghth : 옵션개수
+  - selecttedIndex : 선택된 옵션의 인덱스 번호
+  - size : 보여지는 개수
+  
+* option 객체의 프로퍼티
+  - selected : 옵션이 선택상태이면 true
+  - text : 옵션 문자열, value : value 속성 문자열
+```
+
+-----------------------------------------------------------------------------------------------
+
+# 오늘의 학습목표
+- Event 실습 및 Window를 이해하고 적용할 수 있다.
+- * 포트폴리오 페이지 작성 : 6~7교시 - 학습내용 실습 + 포트폴리오 작
+
+## 이론들
+```html
+<!-- 
+	BOM
+		- 브라우저가 실행되 있는 환경에 자바스크립트 코드로 접근하고 제어할 수
+			있도록 설계된 객체들의 그룹이다.
+		- 표준이 없다.
+		- 종류
+			. window
+				. navigator
+				. history
+				. location
+				. screen
+				. document = html (DOM객체)
+
+		- window
+			1) 속성
+				. window	:	현재 윈도우 객체에 대한 레퍼런스
+				. document	:	윈도우에 담긴 document객체에 대한 레퍼런스
+				. location
+				. navigator
+				. history
+				. name		:	윈도우 이름
+				. menubar
+				. scrollbars
+				. toolbar
+				
+				. frames	:	윈도우에 존재하는 frames 컬렉션
+				. length	:	윈도우에 존재하는 frames의 개수
+
+				. close		:	윈도우가 닫혀있으면 true 갖는다.
+
+				. top		:	최상위 윈도우 객체의 레퍼런스
+				. parent	:	부모 윈도우 객체의 레퍼런스
+
+				. innerWidth : 	수직스크롤바를 포함하여 브라우저 안에 HTML문서가 출력되는 영역
+				. innerHeight : 수평스크롤바를 포함하여 (	상  동	)
+				. outerWidth :
+				. outerHeight :
+
+				. screenX/Y	:	스크린상의 윈도우 X좌표, Y좌표
+				. scrollX/Y	:	현재 문서의 스크롤 X값, Y값
+
+			2) 메서드
+				. open()	:	 새 윈도우 열기
+				. close()	:	윈도우 닫기
+				. focus()
+				. blur()	:	포커스 해제
+				. getSelection() : 윈도우 안에 선택된 텍스트를 문자열로 반환해준다.
+
+				. alert(), confirm(), prompt()
+				. print(): 현재 페이지를 출력하기
+
+				. setInterval() : 반복호출 타이머를 가동시킨다.
+				. clearInterval() : 가동중인 타이머 중단
+
+				. setTimeout() : 1회 호출
+				. clearTimeout() : setTimeout 중단
+
+	. 윈도우 창 열기
+			. let 변수 = window.open ("출력할 웹페이지", "창의 이름", "윈도우의 모양크기 속성");
+				- 창의 이름 : 내가 짓는 이름, 생략도 가능
+						_blank, _parent, _self, _top
+
+				- 속성
+					. width, height, left(스크린상의 x값), top, 
+					. resizable(yes|no), scrollbar(수펴수직 스크롤러 출력지정 -yes|no)
+					. location, status, toolbar
+ -->
+
+
+<!-- 
+	웹페이지 스크롤
+		: window객체를 활용하면 웹 페이지를 상하좌우로 스크롤 할 수 있다.
+		- scrollBy(x,y) , scrollTo(x,y)
+ -->
+
+```
+
+### setInterval
+```html
+<!DOCTYPE html>
+<!-- 
+	웹페이지 스크롤
+		: window객체를 활용하면 웹 페이지를 상하좌우로 스크롤 할 수 있다.
+		- scrollBy(x,y) , scrollTo(x,y)
+ -->
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+	function startScroll(interval){
+		setInterval('autoScroll()',interval)
+	}
+
+	function autoScroll(){
+		window.scrollBy(0,10);
+	}
+
+</script>
+</head>
+<body onload="startScroll(1000)" style="background: yellow;">
+	<h3>자동 스크롤 페이지</h3>
+	<hr>
+	<h3>꿈길(이동순)</h3>
+	꿈길에발자취가 있다면남의 집 창밖<br>
+	그 돌계단 길이 이미 오래전에<br>
+	모래가 되고 말았을 거에요<br>
+	하지만<br>
+	그 꿈길에서 자취가 없다 하니<br>
+	나는 그것이 정말 서러워요<br>
+	이 밤도<br>
+	나는 님의 집 창밖<br>
+	그 돌계단 위에 홀로 서서<br>
+	혹시라도 님의 목소리가 들려올까<br>
+	고개 숙이고 엿들어요
+</body>
+</html>
+```
+
+### window.location select option
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+	function load(){
+		let select = document.getElementById('site');
+		window.location=select[select.selectedIndex].value;
+	}
+</script>
+</head>
+<body>
+	<h3>웹 사이트 접속(페이지이동)</h3>
+	<hr>
+	<select id="site">
+		<option value="http://www.naver.com">네이버</option>
+		<option value="http://www.google.com">구글</option>
+		<option value="win6.html">내페이지</option>
+	</select>
+	<p></p>
+	<button onclick="load()">사이트접속</button>
+
+</body>
+</html>
+```
+
+# 특정한 것에만 event가 적용되게 하는것은 target
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<script>
+
+	
+
+	function doing(event){
+		let clickedElement = event.target;
+		clickedElement.classList.toggle("enLarge");
+	}
+
+</script>
+<style>
+
+
+	div {
+		text-align: center;
+	}
+
+	.enLarge {
+		transform: scale(2.5);
+	}
+
+</style>
+</head>
+<body>
+	<h3>아이템을 클릭하면 2.5배 크기로</h3>
+	<hr>
+	<h3>여름 방학 때 하고 싶은 거슬</h3>
+	<div>
+		<p onclick="doing(event)">. 자전거로 대한민국 일주</p>
+		<p onclick="doing(event)">. 책 100권 읽기</p>
+		<p onclick="doing(event)">. 철인 3종 경기 준비</p>
+		<p onclick="doing(event)">. 자바스크립트 정복</p>
+	</div>
+
+</body>
+</html>
+```
