--- a/4월 3주차/4얼 19일.MD
+++ b/4월 3주차/4얼 19일.MD
@@ -1,64 +1,17 @@
 # Review
-사진 찍은것들
-
-HTML Event 작성 방법
-- HTML태그 안에서 작성
-- HTML DOM객체가 가지고 있는 이벤트 리스너 프로퍼티에 작성
-- DOM객체의 addEventListener('이벤트',리스너함수명,true|false) 활용 작성
-
-event 객체
-- 일반 함수형 리스너함수 - 첫번째 매개변수를 통해 전달받는다.(생략가능)
-- 익명함수              - 첫번째 매개변수를 통해 전달받는다.(생략가능)
-- HTML태그 안에 리스너 함수 - 이벤트 객체느 event 이름으로 전달 받는다
-- event객체 프로퍼티(속성)
+Window / location / screen 객체활용
+- 새로운 창 만들기 열기
+- 지정된 시간 후 페이지 이동
 ```
-- Type : 이벤트가 발생한 이벤트의 종류를 나타내는 문자열(click,load등)
-- target : 이벤트를 발생시킨 객체(DOM 또는 HTML태그)
-- currentTarget:현재 이벤트 리스너를 실행하고 있는 DOM객체
-- preventDefault(): 이벤트 디폴트 행동을 취소시키는 메서드
+  . let newWin = window.open('url', 'name', '윈도우모양크기 문자열')
+  . window.location = url ( 예 : select[select.selectedIndex].value )
 ```
-
-event 흐름
-- 캡쳐단계, 버블단계
-
-마우스 핸들링
-- x,y : (x,y)는 타깃 객체의 부모 객체내에서의 마우스 좌표
-- client X,Y
-- screenX,Y
-- offsetX,Y
-- wheelDelta : 마우스 휠이 구르는 방향(위-양수, 아래-음수)
-
-이미지 로딩과 출력
-- img태그를 사용하지 않고 자바스크립트 코드로 image객체를 생성하여 로딩 할 수 있다.
-- let image = new Image()에 의해 생성된 image객체는
-- 이미지를 로딩하여 저장해 두는 목적으로만 사용된다.
-- image객체에 로딩된 이미지는 반드시 img태그를 통해서만 화면에 출력된다.
-- 웹 페이지의 출력속도를 높이기 위해... 미리 이미지를 newimage()로 객체를 만들어 로딩해놓고 활용하는 것이 좋다.
-
-1) let img = new = image();
-2) img.src = img
-
-라디오 버튼
-- getEmenetsByName('name')으로 가져온 다음에
-- 반복문속에서 객체.checked==true?  확인하여 선택버튼을 알아낸다
-
-체크박스
-- name속성이 모두 다르다.
-- input type="checkbox" name = '', onclick = "리스너함수(this)" + if문과 name
-
-Select
-- 선택된 옵션은 selectedindex로 알아낸다 - let index = 객체.selectedIndex;
-```
-* select와 onchange() 리스너
-* select프로퍼티와 컬렉션
-  - lenghth : 옵션개수
-  - selecttedIndex : 선택된 옵션의 인덱스 번호
-  - size : 보여지는 개수
-  
-* option 객체의 프로퍼티
-  - selected : 옵션이 선택상태이면 true
-  - text : 옵션 문자열, value : value 속성 문자열
-```
+- 반복 호출
+1) setTimeout('코드 | 함수',time);
+2) setInterval('코드 | 함수',time);
+- screen 속성
+1) availHeight / availWidth : 작업표시줄 제외하고 브라우저 출력 가능
+2) Height / width : 스크린 수직/수평 픽셀수
 
 -----------------------------------------------------------------------------------------------
 
