--- a/4월 3주차/4얼 19일.MD
+++ b/4월 3주차/4얼 19일.MD
@@ -185,3 +185,33 @@ Window / location / screen 객체활용
 </body>
 </html>
 ```
+
+### image canvas 안에 딱 맞게
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<canvas
+		id="myCanvas"
+		width="500"
+		height="500"
+		style="background: aliceblue; border: 20px solid #696969;"
+	>지원되지 않습니다.</canvas>
+	<script>
+		let canvas = document.getElementById('myCanvas');
+		let context = canvas.getContext('2d');
+
+		let img = new Image();
+		img.onload=function(){
+			context.drawImage(img,0,0,canvas.width, canvas.height);
+		}
+		img.src="./image/heart1.png"
+
+	</script>
+</body>
+</html>
+```
