--- a/4월 3주차/4얼 19일.MD
+++ b/4월 3주차/4얼 19일.MD
@@ -79,6 +79,29 @@ Window / location / screen 객체활용
 	strokeRect(x,y,w,h)	-	캔버스에 직접그린다.	
  -->
  
+ <!-- 
+	svg란
+		. Scaleable Vector Graphic의 약자
+		. 확장, 축소하여도 난조가 발생하지 않는다.
+		. w3c에 의한 공개 표준
+		
+	svg와 캔버스의 차이
+		구분		사용방식					특징
+		-----------------------------------------
+		SVG		. 벡터방식					. 품질저하가 없다.
+				. 그래픽요소를 수학적인 식에 의해	. 자연스러운 확대/축
+				     수식의 조합형태로 저장하는 방식	. 모든 해상도에서 고품질 출력
+		-----------------------------------------
+		Canvas	. 비트맨방식 				. 한번 그려지면 크기 조정이나
+				. 픽셀의 조합으로 표현			     변환이 불가능 하다.
+										. 자연스럽지 못한 확대축소
+										. 속도가 빠르다.
+
+	구현하는 방식
+		. SVG요소를 이용해서 HTML에 직접 구현하는 방식
+		. 별도의 * .svg로 작성해서, iframe요소나  a요소로 연결하여  삽입하는 방식
+ -->
+ 
 ```
 
 ### Rect , strokeRect
