--- a/4월 3주차/4얼 19일.MD
+++ b/4월 3주차/4얼 19일.MD
@@ -315,3 +315,107 @@ Window / location / screen 객체활용
 </html>
 
 ```
+
+### getElement, getClass 등 이것저것 많이 이용해봤음 onchange()도 오늘 한거
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+<style>
+	#canvas{
+		margin-left: 50px;
+		margin-top: 100px;
+	}
+
+
+</style>
+</head>
+<body>
+	<h1>폼으로 사각형 그리기</h1>
+	<hr>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;x : <input type="text" id="x" class="contents">
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; y : <input type="text" id="y" class="contents"><br>
+	width : <input type="text" id="width" class="contents">
+	 &nbsp;height : <input type="text" id="height" class="contents"><br>
+	 선굵기 : <input type="text" id="선굵기" class="contents">
+	선색 : <select id="fontColorSelect" onchange="changeColor()">
+		<option value="first" selected>색을 고르세요</option>
+		<option value="red">빨간색</option>
+		<option value="orange">주황색</option>
+		<option value="yellow">노란색</option>
+		<option value="green">초록색</option>
+		<option value="blue">파란색</option>
+	</select>
+	 <br>
+	 <p></p>
+	<input type="button" id="draw" value="그리기" onclick="draw()">
+	<input type="button" id="draw" value="내용 지우기" onclick="contentsErase()">
+	<input type="button" id="erase" value="그림 전체 지우기" onclick="erase()">
+	
+
+	<canvas
+	id="canvas"
+	width="1000px"
+	height="500px"
+	background
+	style="background: lightblue;"
+	></canvas>	 
+<script>
+
+	let canvas = document.getElementById("canvas");
+	let context = canvas.getContext('2d');
+
+
+	let x = document.getElementById('x');
+	let y = document.getElementById('y');
+	let width = document.getElementById('width');
+	let height = document.getElementById('height');
+	let 선굵기 = document.getElementById('선굵기');
+
+	function draw(){
+		context.beginPath();
+		context.rect(x.value, y.value, width.value, height.value);
+		context.lineWidth = 선굵기.value;
+		context.stroke();
+
+		let contentsInputs = document.getElementsByClassName("contents");
+		for (let i = 0; i < contentsInputs.length; i++) {
+			contentsInputs[i].value = "";
+		}
+
+		let colorSelect = document.getElementById("fontColorSelect");
+    	colorSelect.value = "first";
+
+
+
+	}
+
+	function contentsErase(){
+
+		let contentsInputs = document.getElementsByClassName("contents");
+		for (let i = 0; i < contentsInputs.length; i++) {
+			contentsInputs[i].value = "";
+		}
+
+		let colorSelect = document.getElementById("fontColorSelect");
+    	colorSelect.value = "first";
+
+	}
+
+	function erase(){
+		context.clearRect(0,0, canvas.width, canvas.height);
+	}
+
+	function changeColor() {
+		let colorSelect = document.getElementById("fontColorSelect");
+		let selectedColor = colorSelect.value;
+		context.strokeStyle = selectedColor;
+	}
+
+</script>
+
+</body>
+</html>
+```
