--- a/4월 3주차/4얼 19일.MD
+++ b/4월 3주차/4얼 19일.MD
@@ -102,6 +102,53 @@ Window / location / screen 객체활용
 		. 별도의 * .svg로 작성해서, iframe요소나  a요소로 연결하여  삽입하는 방식
  -->
  
+ <!-- 
+
+	Geolocation API
+		- 위치를 추적하기 위해 사용한다.
+		- 사용자의허가를 요구하는 명시적인 함수를 제공하지는 않는다.
+
+		- navigator.geolocation
+			. coords.latitude	:	위도
+			. coords.longitude	:	경도
+			. coords.altitude	:	고도
+			. coords.heading
+			. coords.speed
+			--------------------
+			getCurrentPosition(successCallback, errorCallback, options)
+				- successCallback(){} : 성공했을때 호출되는 함수
+				- errorCallback(){} : 실패했을때 호출되는 함수
+				(오류코드)
+					. 위치정보수집권한을 얻지 못할 경우 1	(Permission_de..)
+					. 위치정보를 얻지 못했을 경우 2
+					. 제한시간을 초과한 경우 4
+					. 알 수 없는 경우
+
+				- options : 선택사항
+					. enableHighAccuracy = true/false
+					. timeout : 정보파악에 대한 시간제한(ms)
+					. maxmumAge : 파악된 정보에 대한 제한시간설
+						(0: 항상 새로운 위치정보를 요청하게 된다.)
+
+			watchPosition() : 위치가 변경될때마다 업데이트 되는 위치정보를 지속적으로 변환
+			clearWatch()	:	watch 동작종
+
+		- 사용자위치 -	Position 객체
+					. Coordinates 객체
+					. TimeStamp 객체
+
+			. Coordinates객체
+				latitude	위도
+				longitude	경도
+				altitude	고도 (null)
+				---------------
+				accuracy	위도 / 경도의 오차범위
+				altitudeAccuracy 고도의 오차범위
+				---------------
+				heading		0~360
+
+ -->
+ 
 ```
 
 ### Rect , strokeRect
