--- a/4월 3주차/4얼 19일.MD
+++ b/4월 3주차/4얼 19일.MD
@@ -504,3 +504,64 @@ Window / location / screen 객체활용
 </body>
 </html>
 ```
+
+### 지도 (지금 위치)
+```html
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Insert title here</title>
+</head>
+<body>
+	<h3>현재 위치와 지도출력</h3>
+	<hr>
+	<div id="msg">이곳에 위치정보를 출력합니다.</div>
+	<iframe
+		id="map"
+		width="425px"
+		height="350px"
+		frameborder="0"
+		scrolling='0'
+		marginheight="0"
+		marginwidth="0"
+	></iframe><br>
+	<a id="bigmap" target="_blank">새 창에 큰 지도로 다시 보기</a>
+
+	<script>
+		if(navigator.geolocation){
+			navigator.geolocation.getCurrentPosition(success);
+		}else{
+			alert("지원하지 않습니다.");
+		}
+
+		function success(position){
+			let lat = position.coords.latitude;
+			let lon = position.coords.longitude;
+			let acc = position.coords.accuracy;
+
+			lat = lat.toPrecision(6);
+			lon = lon.toPrecision(6);
+
+			let now = new Date();
+			let text = "현재시간 : " + now.toUTCString()+"<br>";
+			text += "현재위치(위도 : "+lat+"˚, 경도: "+lon+"˚)<br>";
+			text += "정확도 : "+acc.toPrecision(6) + "m<br>";
+
+			document.getElementById('msg').innerHTML=text;
+
+			map.src = "https://www.openstreetmap.org/export/embed.html?bbox="+
+						(parseFloat(lon)-0.01)+"%2C"+(parseFloat(lat)-0.01)+"%2C"+
+						(parseFloat(lon)+0.01)+"%2C"+(parseFloat(lat)+0.01);
+
+			let maplink = document.getElementById('bigmap');
+			let zoom = 15;
+			maplink.href = "https://www.openstreetmap.org/#map="+zoom+"/"+
+							lat+"/"+lon;
+		}
+
+	</script>
+
+</body>
+</html>
+```
