--- a/성수만/해야할것.MD
+++ b/성수만/해야할것.MD
@@ -1,3 +1,5 @@
 - 로그인 구현 ( 비로그인 로그인 다르게 )
 - 게시판 구현 ( 고객, 사업자 같음 )
 - 사업체등록 구현 ( 사업자만 가능 )
+- 게시물에 대한 좋아요,즐겨찾기 기능 넣기
+- 좋아요, 즐겨찾기, 조회수에 따른 1 2 3 위 메인에 띄우기
